2.1.0 not released

	* fix peer_info holding an i2p destination
	* implement i2p_pex, peer exchange support for i2p torrents
	* deprecate torrent_alert::torrent_name()
	* requires OpenSSL minimum version 1.1.0 with SNI support
	* try harder to bind TCP and UDP sockets to the same port
	* made disk_interface's status_t type a flags type
	* optimize resume data format to use less space
	* add a simpler overload to bencode() returning a vector<char>
	* introduced a new API for creating torrents, enabling file_storage optimizations
	* default build to not include functions deprecated in libtorrent 1.1 and earlier
	* add comment, created_by and creation_date to add_torrent_params
	* move session_flags to session_params
	* the entry class is now a standard variant type
	* use std::string_view instead of boost counterpart
	* libtorrent now requires C++17 to build
	* added support for WebTorrent

2.0.12

	* cache DNS failures for a shorter time
	* file_renamed_alert is always posted, regardless of alert mask
	* add feature to request resume data synchronously
	* don't leak file descriptors to child processes (O_CLOEXEC)
	* optimize the utp resend
	* optimize tracker announcements
	* fix handling of invalid filenames
	* add support for I2CP inbound.lengthVariance and outbound.lengthVariance tunnel settings

2.0.11 released

	* validate add_torrent_params::save_path at run-time
	* use stricter rules for what filenames are valid on Android
	* fix applying IP filter to DHT traffic (HanabishiRecca)
	* fix race condition when cancelling requests after becoming a seed
	* fix performance bug in the file pool, evicting MRU instead of LRU (HanabishiRecca)
	* fix bug where file_progress could sometimes be reported as >100%
	* don't hint FADV_RANDOM on posix systems. May improve seeding performance
	* allow boost connect while checking resume data if no_verify_files flag is set
	* fix BEP-40 peer priority for IPv6
	* limit piece size in torrent creator