@@ -50,7 +50,10 @@ void test_remap_files(storage_mode_t storage_mode = storage_mode_sparse)
 	// the file priorities don't break things
 	int const piece_size = 0x8000;
 	auto orig_files = make_files({{0x8000 * 2, false}, {0x8000, false}});
-	add_torrent_params params = make_torrent(std::move(orig_files), piece_size);
+
+	// v2 torrents and hybrid torrents cannot have their files remapped, that's
+	// why this has to be v1 only
+	add_torrent_params params = make_torrent(std::move(orig_files), piece_size, lt::create_torrent::v1_only);
 
 	static std::array<const int, 2> const remap_file_sizes
 		{{0x8000, 0x8000 * 2}};
